--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -6,6 +6,12 @@
     <p>
       <%= book.author %>
     </p>
-
   <% end %>
+</div>
+
+
+<div>
+  <%= link_to 'Log In', login_path  %>
+  <%= link_to 'Sign Up', new_user_path %>
+  <%= link_to 'Log Out', logout_path %>
 </div>
