add link on index page to show page

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,7 +2,7 @@
 
 <div class='books-container'>
   <%= @books.each do |book| %>
-    <%= book.title %>
+    <%= link_to book.title, book_path(book) %>
     <p>
       <%= book.author %>
     </p>
