hide login/register buttons if a user is signed in

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -11,7 +11,11 @@
 
 
 <div>
-  <%= link_to 'Log In', login_path  %>
-  <%= link_to 'Sign Up', new_user_path %>
-  <%= link_to 'Log Out', logout_path %>
+  <% if session[:user_id] != nil %>
+    <%= link_to 'Log Out', logout_path %>
+  <% else %>
+    <%= link_to 'Log In', login_path  %>
+    <%= link_to 'Sign Up', new_user_path %>
+  <% end %>
+
 </div>
