--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,17 +1,22 @@
 <h2>BookWizard</h2>
 
+<div class='nav'>
+  <% if session[:user_id] != nil %>
+    <%= link_to 'Log Out', logout_path %>
+  <% else %>
+    <%= link_to 'Log In', login_path  %>
+    <%= link_to 'Sign Up', new_user_path %>
+  <% end %>
+</div>
+<p>
+  
+</p>
+
 <div class='books-container'>
-  <%= @books.each do |book| %>
+  <% @books.each do |book| %>
     <%= link_to book.title, book_path(book) %>
     <p>
       <%= book.author %>
     </p>
   <% end %>
-</div>
-
-
-<div>
-  <%= link_to 'Log In', login_path  %>
-  <%= link_to 'Sign Up', new_user_path %>
-  <%= link_to 'Log Out', logout_path %>
 </div>
